<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ll_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_heading_1"
            android:textSize="@dimen/text_heading_1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_heading_checkbox"
            android:textSize="@dimen/text_heading_2" />

        <CheckBox
            android:id="@+id/cb_menu_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_1" />

        <CheckBox
            android:id="@+id/cb_menu_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_2" />

        <CheckBox
            android:id="@+id/cb_menu_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_3" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_heading_radio"
            android:textSize="@dimen/text_heading_2" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/radio_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/gender_male" />

            <RadioButton
                android:id="@+id/radio_female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender_female" />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_heading_spinner"
            android:textSize="@dimen/text_heading_2" />

        <Spinner
            android:id="@+id/spin_string"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Spinner
            android:id="@+id/spin_entity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_submit" />
    </LinearLayout>
</ScrollView>